--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-kaggle
-matplotlib
-seaborn
+numpy
 pandas
 scikit-learn
+seaborn
+matplotlib
+xgboost
+imbalanced-learn  # For imblearn library
+joblib
